# tree-sitter-conl

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.MIT  Makefile  Package.swift  README.md  binding.gyp  example.conl  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  sample.csv  setup.py  tree-sitter.json
bindings/c/: tree-sitter-conl.h  tree-sitter-conl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_conl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConlTests/: TreeSitterConlTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: errors.txt  lists.txt  map.txt  values.txt
